# TradeMind-AI

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  LAUNCH.md  PRODUCTION_READINESS.md  README.md  VERIFICATION.md  alembic.ini  docker-compose.yml  launch.mjs  launch_trademind.bat  launch_trademind.ps1  launch_trademind.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_audit_logs.py  002_market_data_engine.py  003_analysis_engine.py  004_trade_setup_engine.py  005_strategy_backtest_engine.py  006_validation_toolkit.py  007_nse_exchange.py  008_add_3m_30m_timeframes.py
app/: __init__.py  main.py
app/adapters/: __init__.py  base.py  registry.py
app/api/: __init__.py  deps.py
app/config/: __init__.py  settings.py
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
demo-server/: Dockerfile  data.mjs  market-data.mjs  package.json  railway.toml  server.mjs
docs/: README.md
scripts/: backfill_candles.mjs  bootstrap_market.mjs  bootstrap_market.py  lan-host.mjs  start_api.sh  verify-cloud-ready.mjs
studio/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
terminal/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
tests/: __init__.py  conftest.py  test_exceptions.py  test_health.py
(+367 files in other folders)
